--- a/servidor/templates/pages/idle.html
+++ b/servidor/templates/pages/idle.html
@@ -17,8 +17,12 @@
 
     <div>
         <h1 style="text-align: center;">SOCO FORTE</h1>
-        <h1 style="text-align: center;">Crédito: 50 REAIS</h1>
+        <h1 style="text-align: center;"
+            hx-get="{{ url_for('saldo') }}"
+            hx-trigger="every 1s">Crédito: {{ saldo }} REAIS</h1>
         <h2 style="text-align: center;">5 reais por jogo</h2>
+    </div>
+    <div id="start">
     </div>
 
     <div style="display: flex; flex-direction: column; justify-content: space-evenly; flex-grow: 1; align-items: center;">    
