feat: implementa start para tela de jogo

--- a/servidor/templates/partials/saldo.html
+++ b/servidor/templates/partials/saldo.html
@@ -2,5 +2,9 @@ Crédito: {{ saldo }} REAIS
 {% if liberado %}
 <div hx-swap-oob="outerHTML:#start" id="start">
     <h1 style="text-align: center;">Pressione <span style="color: red;">START</span> para começar</h1>
+    <div hx-get="{{ url_for('jogar') }}"
+         hx-trigger="every 1s"
+         hx-target="main">
+    </div>
 </div>
 {% endif %}
