--- a/servidor/templates/pages/config.html
+++ b/servidor/templates/pages/config.html
@@ -3,7 +3,7 @@
      <main style="display: flex; flex-direction: column; align-items: center; justify-content: center;">
         <ul>
             <li hx-get="{{ url_for('idle') }}"
-                hx-target="body"
+                hx-target="main"
                 hx-swap="outerHTML"
                 class="text-link">
                 <h1>Modo Normal</h1>
