--- a/servidor/templates/pages/idle.html
+++ b/servidor/templates/pages/idle.html
@@ -1,4 +1,7 @@
 <main style="flex-grow: 1; display: flex; flex-direction: column;">
+    <audio src="{{ url_for('static', filename='inicial.mp3') }}" autoplay loop>
+            O browser não suporta áudio
+    </audio>
     <style>
         .ranking-list {
             padding-left: 0;
